# Hemiphoto3D-private

./: .gitmodules  CLAUDE.md  CMakeLists.txt  PLAN.md  PROGRESS.md  STEP_CONFIG.md
.claude/commands/: gate.md  resume.md  status.md  step.md  sub-step.md  test-all.md
.claude/projects/-home-esaro-Documents-Hemiphoto3D/memory/: MEMORY.md  step7_subtasks.md
cmake/: FindDependencies.cmake
data/synthetic/: cameras_gt.json
include/: types.h
scripts/: capture_guide.md  preprocess_images.py
src/: main.cpp  pipeline.cu  pipeline.h
src/dense_recon/: patchmatch_mvs.cu  patchmatch_mvs.h  point_cloud.cu  point_cloud.h
src/export/: mesh_exporter.h  obj_exporter.cpp  ply_exporter.cpp  stl_exporter.cpp
src/feature_detection/: feature_matching.cu  feature_matching.h  sift_cuda.cu  sift_cuda.h
src/meshing/: marching_cubes.cu  marching_cubes.h  poisson_recon.cpp  poisson_recon.h
src/sfm/: bundle_adjust.cpp  bundle_adjust.h  camera_pose.cpp  camera_pose.h
src/utils/: cuda_utils.cu  cuda_utils.cuh  image_loader.cpp  image_loader.h  math_utils.h  synthetic_data.cpp  synthetic_data.h
tests/: CMakeLists.txt  test_image_loader.cpp  test_matching.cpp  test_meshing.cpp  test_patchmatch.cpp  test_point_cloud.cpp  test_sfm.cpp  test_sift.cpp
